--- a/css/main.css
+++ b/css/main.css
@@ -70,12 +70,12 @@ img {
   padding-right: 40px;
 }
 
-@media screen and (min-width: 427px) and (max-width: 769px) {
+@media screen and (min-width: 735px) and (max-width: 769px) {
   .container {
     max-width: 768px;
   }
 }
-@media screen and (min-width: 320px) and (max-width: 426px) {
+@media screen and (min-width: 320px) and (max-width: 734px) {
   .container {
     max-width: 374px;
     padding-left: 22px;
@@ -105,7 +105,7 @@ img {
   z-index: 99;
 }
 .header nav .nav {
-  padding: 32px 40px;
+  padding: 12px 40px;
   max-width: 1110px;
   margin: 0 auto;
   display: flex;
@@ -122,6 +122,7 @@ img {
 .header nav .nav div .nav__sec-button {
   width: 76px;
   height: 40px;
+  cursor: pointer;
   background-color: #F1E4FF;
   color: #685ED6;
   border-radius: 6px;
@@ -137,6 +138,7 @@ img {
 .header nav .nav div .nav__main-button {
   width: 138px;
   height: 40px;
+  cursor: pointer;
   background-color: #685ED6;
   color: #FFFFFF;
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.07);
@@ -183,6 +185,7 @@ img {
 .header__content button {
   width: 168px;
   height: 48px;
+  cursor: pointer;
   background-color: #685ED6;
   color: #FFFFFF;
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.07);
@@ -208,7 +211,7 @@ img {
   background-repeat: no-repeat;
 }
 
-@media screen and (min-width: 427px) and (max-width: 769px) {
+@media screen and (min-width: 735px) and (max-width: 1024px) {
   .container {
     max-width: 768px;
   }
@@ -241,7 +244,7 @@ img {
     height: 338px;
   }
 }
-@media screen and (min-width: 320px) and (max-width: 426px) {
+@media screen and (min-width: 320px) and (max-width: 734px) {
   .container {
     max-width: 374px;
     padding-left: 22px;
@@ -251,7 +254,7 @@ img {
     background-image: none;
   }
   .header nav .nav {
-    padding: 32px 22px;
+    padding: 12px 22px;
   }
   .header nav .nav img {
     width: 95px;
@@ -406,7 +409,7 @@ img {
   height: 666.58px;
 }
 
-@media screen and (min-width: 427px) and (max-width: 769px) {
+@media screen and (min-width: 735px) and (max-width: 769px) {
   .container {
     max-width: 768px;
   }
@@ -444,7 +447,7 @@ img {
     height: 487px;
   }
 }
-@media screen and (min-width: 320px) and (max-width: 426px) {
+@media screen and (min-width: 320px) and (max-width: 734px) {
   .container {
     max-width: 374px;
     padding-left: 22px;
@@ -558,6 +561,7 @@ img {
   margin-top: 46px;
   width: 287px;
   height: 48px;
+  cursor: pointer;
   background-color: #685ED6;
   color: #FFFFFF;
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.07);
@@ -576,7 +580,7 @@ img {
   display: none;
 }
 
-@media screen and (min-width: 427px) and (max-width: 769px) {
+@media screen and (min-width: 735px) and (max-width: 769px) {
   .container {
     max-width: 768px;
   }
@@ -599,7 +603,7 @@ img {
     display: none;
   }
 }
-@media screen and (min-width: 427px) and (max-width: 769px) and (min-width: 320px) and (max-width: 769px) {
+@media screen and (min-width: 735px) and (max-width: 769px) and (min-width: 320px) and (max-width: 769px) {
   .tariff .tariff__scroll {
     margin-top: 24px;
     display: flex;
@@ -616,7 +620,7 @@ img {
     background-color: #685ED6;
   }
 }
-@media screen and (min-width: 320px) and (max-width: 426px) {
+@media screen and (min-width: 320px) and (max-width: 734px) {
   .container {
     max-width: 374px;
     padding-left: 22px;
@@ -641,7 +645,7 @@ img {
     display: none;
   }
 }
-@media screen and (min-width: 320px) and (max-width: 426px) and (min-width: 320px) and (max-width: 769px) {
+@media screen and (min-width: 320px) and (max-width: 734px) and (min-width: 320px) and (max-width: 769px) {
   .tariff .tariff__scroll {
     margin-top: 24px;
     display: flex;
@@ -769,7 +773,7 @@ img {
   z-index: -1;
 }
 
-@media screen and (min-width: 427px) and (max-width: 769px) {
+@media screen and (min-width: 735px) and (max-width: 1024px) {
   .container {
     max-width: 768px;
   }
@@ -803,7 +807,7 @@ img {
     height: 316px;
   }
 }
-@media screen and (min-width: 320px) and (max-width: 426px) {
+@media screen and (min-width: 320px) and (max-width: 734px) {
   .container {
     max-width: 374px;
     padding-left: 22px;
@@ -942,7 +946,7 @@ img {
   background-color: #685ED6;
 }
 
-@media screen and (min-width: 427px) and (max-width: 769px) {
+@media screen and (min-width: 735px) and (max-width: 769px) {
   .container {
     max-width: 768px;
   }
@@ -959,7 +963,7 @@ img {
     line-height: 40px;
   }
 }
-@media screen and (min-width: 320px) and (max-width: 426px) {
+@media screen and (min-width: 320px) and (max-width: 734px) {
   .container {
     max-width: 374px;
     padding-left: 22px;
@@ -1051,7 +1055,7 @@ img {
   border-radius: 0px 5px 5px 0px;
 }
 
-@media screen and (min-width: 427px) and (max-width: 769px) {
+@media screen and (min-width: 735px) and (max-width: 1024px) {
   .container {
     max-width: 768px;
   }
@@ -1074,7 +1078,7 @@ img {
     max-width: 216px;
   }
 }
-@media screen and (min-width: 320px) and (max-width: 739px) {
+@media screen and (min-width: 320px) and (max-width: 734px) {
   .container {
     max-width: 374px;
     padding-left: 22px;
@@ -1174,7 +1178,7 @@ img {
   margin: 0 auto;
 }
 
-@media screen and (min-width: 320px) and (max-width: 426px) {
+@media screen and (min-width: 320px) and (max-width: 734px) {
   .container {
     max-width: 374px;
     padding-left: 22px;
