--- a/scss/_mixin.scss
+++ b/scss/_mixin.scss
@@ -1,4 +1,5 @@
 @mixin button-main {
+    cursor: pointer;
     background-color: $button1-bg-color;
     color: $button1-text-color;
     box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.07);
@@ -16,6 +17,7 @@
 
 // 
 @mixin button-secondary {
+    cursor: pointer;
     background-color: $button2-bg-color;
     color: $button2-text-color;
     border-radius: 6px;
