--- a/scss/blocks/_email.scss
+++ b/scss/blocks/_email.scss
@@ -4,7 +4,7 @@
 }
 
 .email {
-    background-image: url(../images/BG\ Mask.png);
+    background-image: url(../images/email_bg.svg);
     background-size: cover;
     background-repeat: no-repeat;
     display: flex;
