--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -1,5 +1,5 @@
 .header__bg {
-    background-image: url(../images/header\ bg.png);
+    background-image: url(../images/header_bg.jpg);
     max-width: 100%;
     height: 809px;
     background-repeat: no-repeat;
@@ -81,7 +81,7 @@
             position: absolute;
             top: 167px;
             right: 0;
-            background-image: url(../images/hr\ bg\ img.png);
+            background-image: url(../images/header_bg_img.svg);
             background-size: cover;
             width: 725px;
             height: 583px;
