--- a/scss/blocks/_tariff.scss
+++ b/scss/blocks/_tariff.scss
@@ -20,10 +20,8 @@
         margin-top: 40px;
         display: flex;
         gap: 30px;
-        overflow: scroll;
         max-width: 100%;
-        height: 390px;
-        padding-bottom: 4px;
+        padding-bottom: 5px;
         .tariff__card {
             max-width: 330px;
             display: flex;
@@ -93,6 +91,8 @@
         }
         .tariff__wrapper {
             margin-top: 36px;
+            box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.07);
+            overflow-x: scroll
         }
         .tariff__scroll {
             @include scroll;
@@ -118,6 +118,8 @@
             line-height: 28px;
         }
         .tariff__wrapper {
+            box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.07);
+            overflow-x: scroll;
             margin-top: 36px;
         }
         .tariff__scroll {
